--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 ***/
 
 /*corrects IE min-height bug*/
-html { display: flex;}
+html { display: inline-flex;}
 body { width: 90%;}
 
 .sfooter {
